# ATOM

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .travis.yml  2  LICENSE  MANIFEST.in  README.md  atom.py  automl.py  example.ipynb  example2.ipynb  mkdocs.yml  plot_det.html  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements-test.txt  requirements.txt  run_atom.ipynb  run_automl.ipynb  setup.cfg  setup.py  test.py  test_main.py  tests.py  versions.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  codecov.yml  pull_request_template.md  pull_request_template.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  doc_improvement.md  doc_improvement.yml  feature_request.md  feature_request.yml
.github/workflows/: config.yml  release.yml  stale.yml
4.0/: 404.html  index.html  sitemap.xml
4.0/dependencies/: index.html
4.0/getting_started/: index.html
4.0/img/: diagram
4.0/license/: index.html
4.0/search/: search_index.json
4.0/user_guide/: index.html
4.1/: 404.html  index.html  sitemap.xml
4.1/dependencies/: index.html
4.1/getting_started/: index.html
4.1/license/: index.html
4.1/search/: search_index.json
4.1/user_guide/: index.html
4.10/: 404.html  index.html  sitemap.xml
4.10/about/: index.html
4.10/contributing/: index.html
4.10/dependencies/: index.html
4.10/faq/: index.html
4.10/getting_started/: index.html
4.10/license/: index.html
4.10/overrides/: home.html
4.10/release_history/: index.html
4.11/: 404.html  index.html  sitemap.xml
4.11/about/: index.html
4.11/contributing/: index.html
4.11/dependencies/: index.html
4.11/faq/: index.html
4.11/getting_started/: index.html
4.11/license/: index.html
4.11/overrides/: home.html
4.11/release_history/: index.html
4.12/: 404.html  index.html  sitemap.xml
4.12/about/: index.html
4.12/contributing/: index.html
4.12/dependencies/: index.html
4.12/faq/: index.html
4.12/getting_started/: index.html
4.12/license/: index.html
4.12/overrides/: home.html  main.html
4.12/release_history/: index.html
4.12/stylesheets/: extra.css
4.14/: 404.html  index.html  sitemap.xml
4.14/about/: index.html
4.14/contributing/: index.html
4.14/dependencies/: index.html
4.14/faq/: index.html
4.14/getting_started/: index.html
4.14/license/: index.html
4.14/release_history/: index.html
4.2/: 404.html  index.html  sitemap.xml
4.2/dependencies/: index.html
4.2/examples/: binary_classification.html  calibration.html  deep_learning.html  early_stopping.html  ensembles.html  feature_engineering.html  imbalanced_datasets.html  multi_metric.html  multiclass_classification.html  regression.html  successive_halving.html  (+2 more)
4.3/: 404.html  index.html  sitemap.xml
4.4/: 404.html  index.html  sitemap.xml
4.5/: 404.html  index.html  sitemap.xml
4.6/: 404.html  index.html  sitemap.xml
4.7/: 404.html  index.html  sitemap.xml
4.8/: 404.html  index.html  sitemap.xml
4.9/: 404.html  index.html  sitemap.xml
atom/: __init__.py  _show_versions.py  _version.py  api.py  atom.py  base.py  basemodel.py  basepredictor.py  baserunner.py  basetracker.py  basetrainer.py  basetransformer.py  branch.py  data_cleaning.py  ensembles.py  feature_engineering.py  feature_selection.py  integrations.py  metrics.py  modeloptimizer.py  models.py  nlp.py  patches.py  pipeline.py  plots.py  training.py  utils.py  voting.py
docs/: 404.html  api.md  autodocs.py  dependencies.md  getting_started  getting_started.md  index.html  index.md  installation.md  other.md  search.html  sitemap.xml
docs_sources/: about.md  api.md  autodocs.py  contributing.md  dependencies.md  examples.md  faq.md  getting_started.md  index.md  license.md  release_history.md  user_guide.md
examples/: accelerating_pipelines.ipynb  accelerating_sklearnex.ipynb  atom  automated_feature_scaling.ipynb  automl.ipynb  binary_classification.ipynb  bootstrapping.ipynb  calibration.ipynb  data_engines.ipynb  deep_learning.ipynb  early_stopping.ipynb  ensembles.ipynb  example_1.ipynb  example_2.ipynb  example_3.ipynb  feature_engineering.ipynb  getting_started.ipynb  holdout_set.ipynb  hyperparameter_tuning.ipynb  imbalanced_datasets-Copy1.ipynb  imbalanced_datasets.ipynb  in_training_validation.ipynb  keras.ipynb  memory_considerations.ipynb  metadata.ipynb  multi_metric.ipynb  multi_metric_runs.ipynb  multiclass_classification.ipynb  multilabel_classification.ipynb  nlp-Copy1.ipynb  nlp.ipynb  pruning.ipynb  ray_backend.ipynb  regression.ipynb  successive_halving.ipynb  test  train_sizing.ipynb  utilities.ipynb  webapp.py
flagged/: log.csv
images/: diagram  diagram_branch
latest/: 404.html  index.html
src/: atom.py  basemodel.py  models.py
tests/: __init__.py  conftest.py  test_api.py  test_atom.py  test_balance.py  test_basemodel.py  test_basepredictor.py  test_baserunner.py  test_basetrainer.py  test_basetransformer.py  test_branch.py  test_data.py  test_data_cleaner.py  test_data_cleaning.py  test_encode.py  test_ensembles.py  test_feature_engineering.py  test_feature_insertion.py  test_feature_selection.py  test_fit.py  test_impute.py  test_init.py  test_methods.py  test_metrics_models.py  test_modeloptimizer.py  test_models.py  test_nlp.py  test_outliers.py  test_pipeline.py  test_plots.py  test_training.py  test_utilities.py  test_utility_methods.py  test_utils.py  test_voting.py  utils.py
v4.10/: 404.html  index.html  sitemap.xml
v4.11/: 404.html  index.html  sitemap.xml
v4.12/: index.html
v4.13/: 404.html  sitemap.xml
v4.14/: 404.html  index.html  sitemap.xml
v4.5/: 404.html  index.html  sitemap.xml
v4.6/: 404.html  index.html  sitemap.xml
v4.7/: 404.html  index.html  sitemap.xml
v4.8/: 404.html  index.html  sitemap.xml
v4.9/: 404.html  index.html  sitemap.xml
v5.0/: autodocs.py  index.html  sitemap.xml
v5.1/: 404.html  autodocs.py  index.html  index.md  sitemap.xml
v5.2/: 404.html  autodocs.py  sitemap.xml
v6.0/: 404.html  index.html  sitemap.xml
v6.1/: 404.html  index.html  sitemap.xml
(+7360 files in other folders)
