[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "atom-ml"
description = "A Python package for fast exploration of machine learning pipelines"
authors = [{name = "Mavs", email = "m.524687@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10,<3.12"
keywords = ["Python package", "Machine Learning", "Modeling", "Data Pipeline"]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beartype>=0.16.4",
    "category-encoders>=2.6.3",
    "dagshub>=0.3.8",
    "dill>=0.3.6",
    "gplearn>=0.4.2",
    "imbalanced-learn>=0.11.0",
    "ipython>=8.11.0",
    "ipywidgets>=8.1.1",
    "featuretools>=1.28.0",
    "joblib>=1.3.1",
    "matplotlib>=3.7.2",
    "mlflow>=2.7.1",
    "modin[ray]>=0.25.0",
    "nltk>=3.8.1",
    "numpy>=1.23.0",
    "optuna>=3.4.0",
    "pandas[parquet]>=2.1.2",
    "plotly>=5.15.0",
    "ray[serve]>=2.7.1",
    "scikit-learn>=1.3.1",
    "scikit-learn-intelex>=2023.2.1; platform_machine == 'x86_64' or platform_machine == 'AMD64'",
    "scipy>=1.10.1",
    "shap>=0.43.0",
    "sktime>=0.24.0",
    "zoofs>=0.1.26",
]

[project.optional-dependencies]
full = [
    "botorch>=0.8.5",
    "catboost>=1.2",
    "explainerdashboard>=0.4.3",
    "gradio>=3.44.4",
    "lightgbm>=4.1.0",
    "pmdarima>=2.0.3",
    "schemdraw>=0.16",
    "sweetviz>=2.3.1",
    "wordcloud>=1.9.2",
    "xgboost>=2.0.0",
]

[tool.pdm.dev-dependencies]
dev = [
    # Linting
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-pyproject>=1.2.3",  # To configure flake8 with pyproject.toml
    "pydocstyle>=6.3.0",
    "mypy>=1.6.1",
    "pandas_stubs>=2.1.1.230928",
    "types-requests>=2.31.0.10",
    # Testing
    "nbmake>=1.4.1",  # To test example notebooks
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.2.0",
    "scikeras>=0.11.0",
    "tensorflow>=2.13.0",
    # Documentation
    "jupyter-contrib-nbextensions>=0.7.0",
    "mike>=1.1.2",  # For versioning
    "mkdocs>=1.5.3",
    "mkdocs-autorefs>=0.5.0",
    "mkdocs-jupyter>=0.24.6",
    "mkdocs-material>=9.4.7",
    "mkdocs-simple-hooks>=0.1.5",
    "pymdown-extensions>=10.3.1",
    "pyyaml>=6.0",
]

[project.urls]
"Documentation" = "https://tvdboom.github.io/ATOM/"
"Issues" = "https://github.com/tvdboom/ATOM/issues"
"Repository" = "https://github.com/tvdboom/ATOM"
"Slack" = "https://join.slack.com/t/atom-alm7229/shared_invite/zt-upd8uc0z-LL63MzBWxFf5tVWOGCBY5g"

[tool.pdm.version]
source = "file"
path = "atom/utils/constants.py"

[tool.pdm.build]
includes = ["atom"]
source-includes = ["tests/*.py"]

[tool.pytest.ini_options]
testpaths = "tests/"
python_files = "*.py"
python_functions = "test_*"

[tool.flake8]
max-line-length = 91
ignore = [
    "W605",  # Invalid escape sequence: \s, \w, etc... (removed because of docstrings)
    "W503",  # Line break before binary operator
    "E731",  # Assign a lambda expression
    "E704",  # Multiple statements on one line (removed because of mypy overloads)
]
per-file-ignores = [
    "__init__.py: F401",  # Imported but unused
]

[tool.isort]
skip_gitignore = true
multi_line_output = 5
atomic = true
lines_after_imports = 2
include_trailing_comma = true
ignore_comments = true
remove_redundant_aliases = true

[tool.pydocstyle]
convention = "numpy"
match = "(?!test_|types).*.py"  # Skip files named test_* and types.py

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["attr-defined"]
