[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "atom-ml"
description = "A Python package for fast exploration of machine learning pipelines"
authors = [{name = "Mavs", email = "m.524687@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
keywords = ["Python package", "Machine Learning", "Modeling", "Data Pipeline"]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beartype>=0.18.0",
    "category-encoders>=2.6.3",
    "dill>=0.3.6",
    "featuretools>=1.28.0",
    "gplearn>=0.4.2",
    "imbalanced-learn>=0.12.0",
    "ipython>=8.9.0",
    "ipywidgets>=8.1.1",
    "joblib>=1.3.1",
    "matplotlib>=3.7.2",
    "mlflow>=2.10.2",
    "nltk>=3.8.1",
    "numpy>=1.23.0",
    "optuna>=3.6.0",
    "pandas>=2.2.2",
    "plotly>=5.18.0",
    "scikit-learn>=1.4.2",
    "scipy>=1.10.1",
    "shap>=0.43.0",
    "sktime[forecasting]>=0.29.0",
    "statsmodels>=0.14.1",
    "zoofs>=0.1.25",  # Keep at 0.1.25 because it's the max conda version
]

[project.optional-dependencies]
full = [
    "botorch>=0.8.5; python_version < '3.12'",
    "catboost>=1.2",
    "dagshub>=0.3.8",
    "dask[dataframe,distributed]>=2024.2.0",
    "explainerdashboard>=0.4.3",
    "gradio>=3.44.4",
    "lightgbm>=4.1.0",
    "modin[ray]>=0.25.0; python_version < '3.12'",
    "optuna-integration>=3.6.0",
    "polars>=0.20.7",
    "pyarrow>=15.0.0",
    "pyspark>=3.5.0",
    "ray[serve]>=2.9.1; python_version < '3.12'",
    "requests>=2.31.0",
    "scikit-learn-intelex>=2023.2.1; platform_system != 'Darwin' and (platform_machine == 'x86_64' or platform_machine == 'AMD64')",
    "schemdraw>=0.16",
    "statsforecast>=1.6.0",
    "sweetviz>=2.3.1",
    "wordcloud>=1.9.2",
    "xgboost>=2.0.0",
]

[tool.pdm.dev-dependencies]
lint = [
    "pre-commit>=3.6.2"
]
test = [
    "absl-py>=2.1.0; python_version < '3.12'",  # Required by tensorflow
    "nbmake>=1.5.3",  # To test example notebooks
    "pytest>=8.1.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "scikeras>=0.11.0; python_version < '3.12'",
    "tensorflow>=2.13.0; python_version < '3.12'",
]
doc = [
    "jupyter-contrib-nbextensions>=0.7.0",
    "kaleido==0.2.1",  # For plotly static image export (v0.2.1.post1 is corrupted)
    "mike>=2.0.0",  # For versioning
    "mkdocs>=1.5.3",
    "mkdocs-autorefs>=1.0.1",
    "mkdocs-git-committers-plugin-2>=2.3.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.4",
    "mkdocs-jupyter>=0.24.6",
    "mkdocs-material>=9.5.13",
    "mkdocs-material-extensions>=1.1.3",
    "mkdocs-simple-hooks>=0.1.5",
    "pymdown-extensions>=10.7.1",
    "pyyaml>=6.0.1",
]

[project.urls]
"Documentation" = "https://tvdboom.github.io/ATOM/"
"Issues" = "https://github.com/tvdboom/ATOM/issues"
"Repository" = "https://github.com/tvdboom/ATOM"
"Slack" = "https://join.slack.com/t/atom-alm7229/shared_invite/zt-upd8uc0z-LL63MzBWxFf5tVWOGCBY5g"

[tool.pdm.version]
source = "file"
path = "atom/utils/constants.py"

[tool.pdm.build]
includes = ["atom"]
source-includes = ["tests/*.py"]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = "tests/"
python_files = "*.py"
python_functions = "test_*"

[tool.isort]
skip_gitignore = true
multi_line_output = 5
atomic = true
lines_after_imports = 2
include_trailing_comma = true
ignore_comments = true
remove_redundant_aliases = true

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 99
indent-width = 4
show-fixes = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "D",  # Missing docstring in public function
    "UP",  # pyupgrade
    "YTT",  # flake8-2020
    "BLE",  # blind-except
    "FBT",  # boolean-trap
    "B",  # bugbear
    "A",  # builtins
    "COM",  # commas
    "C4",  # flake8-comprehensions
    "T10",  # debugger
    "ISC",  # implici-str-concat
    "ICN",  # import-conventions
    "G",  # flake8-logging-format
    "INP",  # no-pep420
    "PIE",  # flake8-pie
    "T20",  # print
    "PYI",  # pyi
    "PT",  # flake8-pytest-style
    "Q",  # quotes
    "RSE",  # raise
    "TID",  # tidy-imports
    "ARG",  # flake8-unused-arguments
    "ERA",  # commented-code
    "PD",  # pandas-vet
    "PGH",  # pygrep
    "FLY",  # flynt
    "NPY",  # numpy-specific-rules
    "PERF",  # performance checks
    "RUF",  # ruff
]
ignore = [
    "E731",  # Do not assign a `lambda` expression, use a `def`
    "COM812",  # Trailing comma missing
    "PD901",  #  Avoid using the generic variable name `df` for DataFrames
    "PD011",  # Use `.to_numpy()` instead of `.values`
    "PD009",  # Use `.iloc` instead of `.iat`
    "ARG002",  # Unused method argument
    "B023",  # Function definition does not bind loop variable
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports
"baserunner.py" = ["ERA001"]  # Commented-out code
"types.py" = [
    "D105",  # Missing docstring in magic method
    "D102",  # Missing docstring in public method
]
"tests/*" = [
    "T20",  # print found
    "S101",  # assert called
    "PT011",  # error is too broad
]
"autodocs.py" = [
    "C408",  # Unnecessary `dict` call
    "ARG001",  # Unused function argument
]
"autorun.py" = [
    "A002",  #  Argument is shadowing a Python builtin
    "BLE001",  # Bare except
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
cache_dir = ".cache/mypy"
ignore_missing_imports = true
disable_error_code = [
    "attr-defined",
    "abstract",  # See https://github.com/python/mypy/issues/4717
    "override",  # Transformers' methods don't always match with that of TransformerMixin
    "misc",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
